tests/errors/validation/literal-at-top-level.fn
---
Description: Literal declared at top level outside any type
Expected: FN2000
---

literal px(value: i32) -> i32
{
    return value
}

type Program
{
    static fn Main -> i32
    {
        return 0
    }
}
